แก้ไขคำพูดโจทย์ HTML

--- a/html.html
+++ b/html.html
@@ -48,33 +48,38 @@
             นักศึกษาจึงต้องทำใบเสร็จเอง
             โดยมีรูปแบบข้อมูลตามในรูป</p>
         <img width="60%" class="box" src="./assets/proposition/1.png">
-        <div>
+        <p>
+            <b>วิธีทำ:</b> เปิดไฟล์นี้ในโปรแกรม vscode จากนั้นเขียนตารางด้วย HMTL ใน <code>&lt;div id="ex1"&gt;</code>
+        </p>
+        <div id="ex1">
             <!-- ใส่โค้ดสร้างตารางใน div นี้ -->
-
         </div>
 
         <!-- ข้อ 2 Form-->
-
+        <br><hr>
         <p class="my-4"><b>ข้อ 2 </b>นักศึกษาอยากได้ข้อมูลของผู้ใช้งาน จึงกำหนดฟอร์มให้ผู้ใช้งานกรอกดังนี้
         </p>
         <ul>
-            <li>ตัวเลือกคำนำหน้าชื่อ ประกอบไปด้วย นาย/นาง/นางสาว โดยตั้งชื่อว่า prename</li>
-            <li>ช่องกรอกชื่อจริง ให้ตั้งชื่อว่า fname</li>
-            <li>ช่องกรอกนามสกุล ให้ตั้งชื่อว่า lname</li>
-            <li>ช่องใส่วันเกิด โดยจะกดเลือกวันที่ได้ ให้ตั้งชื่อว่า dob</li>
-            <li>ช่องใส่อายุ กรอกได้เฉพาะตัวเลข ให้ตั้งชื่อว่า age</li>
-            <li>ปุ่มตัวเลือกชั้นปีแบบ radio ให้ตั้งชื่อว่า year</li>
-            <li>ปุ่ม checkbox เพื่อเลือกว่าจะติดตามข่าวสารหรือไม่ ให้ตั้งชื่อและvalueว่า subscribe</li>
-            <li>ปุ่ม checkbox เพื่อเลือกว่าจะยอมรับหรือไม่ ให้ตั้งชื่อและvalueว่า accept</li>
+            <li>ตัวเลือกคำนำหน้าชื่อ ประกอบไปด้วย นาย/นาง/นางสาว โดยให้ <code>name="prename"</code></li>
+            <li>ช่องกรอกชื่อจริง ให้ตั้ง <code>name="fname"</code></li>
+            <li>ช่องกรอกนามสกุล ให้ตั้ง <code>name="lname"</code></li>
+            <li>ช่องใส่วันเกิด โดยจะกดเลือกวันที่ได้ ให้ตั้ง <code>name="dob"</code></li>
+            <li>ช่องใส่อายุ กรอกได้เฉพาะตัวเลข ให้ตั้ง <code>name="age"</code></li>
+            <li>ปุ่มตัวเลือกชั้นปี radio button ให้ตั้ง <code>name="year"</code></li>
+            <li>checkbox เพื่อเลือกว่าจะติดตามข่าวสารหรือไม่ ให้ตั้ง <code>name="subscribe"</code> และ value="subscribe"</li>
+            <li>checkbox เพื่อเลือกว่าจะยอมรับหรือไม่ ให้ตั้ง <code>name="accept"</code> และ value="accept"</li>
             <li>ปุ่มสำหรับ submit ข้อมูล</li>
         </ul>
 
-        <p style="margin-bottom: 10px;">หน้าที่ของนักศึกษาคือให้สร้างฟอร์มตามที่กำหนด
+        <p class="mb-2">
+            หน้าที่ของนักศึกษาคือให้สร้างฟอร์มตามที่กำหนด
             เพื่อเช็กว่าแบบฟอร์มที่นักศึกษาทำนั้นถูกต้องหรือยัง
             ให้เช็กโดยการกดปุ่ม submit ข้อมูลที่กรอกไปในฟอร์มจะแสดงออกมา ตามรูป</p>
 
         <img width="60%" class="box" src="./assets/proposition/2.png">
-
+        <p>
+            <b>วิธีทำ:</b> เปิดไฟล์นี้ในโปรแกรม vscode จากนั้นเขียน code ใน <code>&lt;form id="form"&gt;</code>
+        </p>
         <form id="form">
             <!-- สร้างฟอร์มต่อจากนี้เลยยย -->
         </form>
