ปรับแก้ไขเพิ่ม วิธีทำ ของโจทย์ Bulma

--- a/css_bulma.html
+++ b/css_bulma.html
@@ -42,11 +42,16 @@
         <img width="60%" class="mb-5 box" src="./assets/proposition/3.1.png">
 
 
-        <!-- ใส่ปุ่มต่อจากนี้ -->
 
+        <p>
+            <b>วิธีทำ:</b> เปิดไฟล์นี้ในโปรแกรม vscode จากนั้นเขียน code ใน <code>&lt;div id="ex3_1"&gt;</code>
+        </p>
+        <div id="ex3_1">
+            <!-- ใส่ปุ่มต่อใน div นี้ -->
+        </div>
 
-
-
+        <br>
+        <hr>
 
         <!-- ข้อ 3.2 text bulma -->
         <li class="my-4"><b>
@@ -64,7 +69,10 @@
 
 
         <!-- แก้ไขรูปแบบข้อความข้่งล่างได้เลย -->
-        <p>Lorem ipsum dolor sit amet,
+        <p class="mb-3">
+            <b>วิธีทำ:</b> เปิดไฟล์นี้ในโปรแกรม vscode จากนั้นแก้ไข attribute class ของ tag <code>&lt;p id="ex3_2"&gt;</code>
+        </p>
+        <p id="ex3_2">Lorem ipsum dolor sit amet,
             consectetur adipisicing
             elit, sed
             do eiusmod tempor
@@ -72,8 +80,10 @@
             dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
             ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
             fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-            deserunt mollit anim id est laborum.</p>
-
+            deserunt mollit anim id est laborum.
+        </p>
+        <br>
+        <hr>
 
         <!-- ข้อ 3.3 size bulma -->
         <li class="my-4"><b>ข้อ 3.3 </b>มีปุ่มมาให้อีกละ ทำปุ่มและจัดตำแหน่งของปุ่มตามนี้</li>
@@ -87,11 +97,16 @@
             <li>ปุ่มเป็นสี info</li>
         </ul>
 
-
-        <div class="has-background-danger-light">
+        <p class="mb-3">
+            <b>วิธีทำ:</b> เปิดไฟล์นี้ในโปรแกรม vscode จากนั้นแก้ไข attribute class ของ tag <code>&lt;a id="ex3_3"&gt;</code>
+        </p>
+        <div class="has-background-danger-light p-3">
             <!-- แก้ไขปุ่มที่มีให้ได้เลย -->
-            <a>ปุ่มนี้กดได้แต่ไม่มีไรขึ้นหรอก</a>
+            <a id="ex3_3">ปุ่มนี้กดได้แต่ไม่มีไรขึ้นหรอก</a>
         </div>
+
+        <br>
+        <hr>
 
         <!-- ข้อ 3.4 form in bulma -->
         <li class="my-4"><b>ข้อ 3.4 </b>พอดีฟอร์มหน้าเมื่อกี้ไม่ค่อยสวยเลย
@@ -101,14 +116,19 @@
 
         <img width="60%" class="mb-5 box" src="./assets/proposition/3.4.png">
 
-
+        
+        <p class="mb-3">
+            <b>วิธีทำ:</b> เปิดไฟล์นี้ในโปรแกรม vscode จากนั้นแก้ไข code ใน <code>&lt;form id="form"&gt;</code>
+        </p>
         <form id="form">
-            <!-- ก้อปโค้ดข้างใน form จากหน้าเมื่อกี้มาเลย -->
+            <!-- ก้อปโค้ดข้างใน form จากหน้าเมื่อกี้มาเลย จากนั้น ปรับแต่งให้สวยงามด้วย Bulma CSS -->
         </form>
 
         <!-- ส่วนสำหรับแสดงข้อมูลจาก Form -->
         <p id="data"></p>
 
+        <br>
+        <hr>
 
         <!-- ข้อ 3.5 Card bulma -->
         <li class="my-4"><b>ข้อ 3.5 </b>หลังจากนักศึกษาได้เรียนวิชา Web Programing มาได้ 2 week แล้ว
@@ -118,19 +138,34 @@
                 target="blank">ดูวิธีสร้าง Card ที่นี่</a></li>
         <img width="30%" class="mb-5" src="./assets/proposition/3.5.png">
 
-
+        <p class="mb-3">
+            <b>วิธีทำ:</b> เปิดไฟล์นี้ในโปรแกรม vscode จากนั้นแก้ไข code ใน <code>&lt;div id="ex3_5"&gt;</code>
+        </p>
         <!-- สร้าง card ที่นี่ -->
+        <div id="ex3_5">
 
-
-
+        </div>
 
         <!-- ข้อ 4 column bulma -->
-        <p class="my-5"><b>ข้อ 4 </b>แบ่ง Column ตามในรูปเลยย</p>
+        <p class="my-5"><b>ข้อ 4 </b>แบ่ง Column ตามในรูปเลยย (<a href="https://bulma.io/documentation/columns/basics/">ดู doc เกี่ยวกับ Columns</a>)</p>
         <img class="mb-6 box" src="./assets/proposition/4.png">
 
-
+        <p class="mb-3">
+            <b>วิธีทำ:</b> เปิดไฟล์นี้ในโปรแกรม vscode จากนั้นแก้ไข code ใน <code>&lt;div id="ex4"&gt;</code>
+        </p>
         <!-- สร้าง Column ต่อจากนี้เลย -->
-
+        <div id="ex4">
+            <!-- ตัวอย่างแถวที่ 1 -->
+            <div class="columns">
+                <div class="column has-background-danger is-four-fifths">
+                  4 of 5
+                </div>
+                <div class="column has-background-light has-text-black">
+                  Auto
+                </div>
+            </div>
+        </div>
+        
 
 
 
