โจทย์ week2 (complete)
เพิ่มโจทย์ position 1 ข้อ

--- a/css_bulma.html
+++ b/css_bulma.html
@@ -29,6 +29,7 @@
     <div class="navbar is-light p-5">
         <b class="mr-4">WEEK 2</b>
         <a href="./html.html" class="mr-4">HTML+CSS</a>
+        <a href="./position.html" class="mr-4">HTML+CSS(2)</a>
         <a href="./css_bulma.html">Bulma</a>
     </div>
 
