เพิ่มคำอธิบาย CSS position

--- a/position.html
+++ b/position.html
@@ -40,6 +40,7 @@
         <li>เมื่อเลื่อน Scroll Mouse รูป dog และรูป cat จะต้องอยู่ในตำแหน่งเดิมตามภาพตัวอย่าง</li>
         <img src="assets\proposition\2.1.gif" style="margin: 20px;"><br>
         <b>วิธีทำ:</b> เปิดไฟล์นี้ในโปรแกรม vscode จากนั้นเขียน code ใน <code>&lt;div id="main-page"&gt;</code>
+        <div><b>Hint: </b>ดูเกี่ยวกับ CSS position property ที่: <a href="https://www.w3schools.com/css/css_positioning.asp">HERE</a></div>
         <div id="screen">
             <div id="main-page">
             <!-- จัดหน้าในนี้เลย -->
