[ADD] New Exercise 5

--- a/position.html
+++ b/position.html
@@ -28,7 +28,8 @@
         <b class="mr-4">WEEK 2</b>
         <a href="./html.html" class="mr-4">HTML+CSS</a>
         <a href="./position.html" class="mr-4">HTML+CSS(2)</a>
-        <a href="./css_bulma.html">Bulma</a>
+        <a href="./css_bulma.html" class="mr-4">Bulma</a>
+        <a href="./landing_page.html">Landing Page</a>
     </div>
 
     <div class="container is-max-desktop p-5">
